<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:id="@+id/gameLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            android:id="@+id/block1"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/block1"
            android:gravity="center"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            android:layout_row="0"
            android:layout_column="1"
            android:id="@+id/block2"
            android:text="@string/block2"
            android:gravity="center"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            android:layout_row="0"
            android:layout_column="2"
            android:id="@+id/block3"
            android:text="@string/block3"
            android:gravity="center"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="80dp"
            android:layout_row="0"
            android:layout_column="3"
            android:id="@+id/block4"
            android:text="@string/block4"
            android:gravity="center"
            android:background="@android:color/darker_gray"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:layout_row="1"
                android:layout_column="0"
                android:id="@+id/block5"
                android:text="@string/block5"
                android:gravity="center"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:layout_row="1"
                android:layout_column="1"
                android:id="@+id/block6"
                android:text="@string/block6"
                android:gravity="center"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:layout_row="1"
                android:layout_column="2"
                android:id="@+id/block7"
                android:text="@string/block7"
                android:gravity="center"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:layout_row="1"
                android:layout_column="3"
                android:id="@+id/block8"
                android:text="@string/block8"
                android:gravity="center"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="80dp"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:id="@+id/block9"
                    android:text="@string/block9"
                    android:gravity="center"
                    android:background="@android:color/darker_gray"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="80dp"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:id="@+id/block10"
                    android:text="@string/block10"
                    android:gravity="center"
                    android:background="@android:color/darker_gray"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="80dp"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:id="@+id/block11"
                    android:text="@string/block11"
                    android:gravity="center"
                    android:background="@android:color/darker_gray"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="80dp"
                    android:layout_row="2"
                    android:layout_column="3"
                    android:id="@+id/block12"
                    android:text="@string/block12"
                    android:gravity="center"
                    android:background="@android:color/darker_gray"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="80dp"
                        android:layout_row="3"
                        android:layout_column="0"
                        android:id="@+id/block13"
                        android:text="@string/block13"
                        android:gravity="center"
                        android:background="@android:color/darker_gray"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="80dp"
                        android:layout_row="3"
                        android:layout_column="1"
                        android:id="@+id/block14"
                        android:text="@string/block14"
                        android:gravity="center"
                        android:background="@android:color/darker_gray"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="80dp"
                        android:layout_row="3"
                        android:layout_column="2"
                        android:id="@+id/block15"
                        android:text="@string/block15"
                        android:gravity="center"
                        android:background="@android:color/darker_gray"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="80dp"
                        android:layout_row="3"
                        android:layout_column="3"
                        android:id="@+id/block16"
                        android:text="@string/block16"
                        android:gravity="center"
                        android:background="@android:color/darker_gray"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"/>

</GridLayout>